# daplink

./: .gitignore  CH32V307RCT6规格书探索总结与设计建议.md  ESP32-C6通讯协处理器PCB器件与布局设计建议.md  README.md  无线DAP OTA上位机与升级协议设计.md  无线DAP中配版PCB布局选型与网络标签说明.md  无线DAP中配版软件架构与升级方案.md  无线DAP烧录器一版到位硬件方案.md  无线DAP烧录器中配版本方案.md  无线DAP烧录器实现方案.md
docs/plans/: 2026-05-28-wdap-ota-host-implementation.md
tools/wdap_ota/: README.md  pyproject.toml
tools/wdap_ota/src/wdap_ota/: __init__.py  cli.py
tools/wdap_ota/src/wdap_ota/gui/: __init__.py  app.py  main_window.py  upload_worker.py
tools/wdap_ota/src/wdap_ota/ota/: __init__.py  session.py  state.py  workflow.py
tools/wdap_ota/src/wdap_ota/protocol/: __init__.py  constants.py  crc.py  firmware.py  frame.py
tools/wdap_ota/src/wdap_ota/transport/: __init__.py  base.py  mock.py  ports.py  serial_port.py
tools/wdap_ota/tests/: test_cli.py  test_firmware.py  test_frame.py  test_gui_shell.py  test_gui_upload_worker.py  test_ota_session.py  test_serial_port.py  test_workflow.py
